[package]
name = "async_runtime_benchmark"
version = "0.1.0"
edition = "2021"
authors = ["Walid El Sayed Aly"]

[[bin]]
name = "tokio_bench"
path = "src/tokio_bench.rs"

[[bin]]
name = "async_std_bench"
path = "src/async_std_bench.rs"

[[bin]]
name = "smol_bench"
path = "src/smol_bench.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
async-std = { version = "1.12", features = ["attributes"] }
smol = "2.0"
futures = "0.3"
criterion = "0.5.0"
serde_json = "1.0"
reqwest = { version = "0.12.14", features = ["json"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "runtime_comparison"
path = "src/runtime_comparison.rs"
harness = false